# eVTOL_Simulation

./: .gitignore  Makefile  README.md
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
include/: Charger.h  Simulation.h  SimulationObject.h  SimulationThread.h  StopWatch.h  TLockedQueue.h  Vehicle.h
src/: CMakeLists.txt  Charger.cpp  Simulation.cpp  SimulationThread.cpp  Vehicle.cpp  main.cpp
test/: CMakeLists.txt  SimulationTest.cpp  TLockedQTest.cpp
